--- a/css/styles.css
+++ b/css/styles.css
@@ -1,16 +1,23 @@
 
+html {
+  font-size: 1.2em;
+ 
+ }
+
 .bio > header {
 	max-width: 80%;
     border: 1px solid gray;
     background-color: lightgray;
     clear: both;
+    line-height: 20px;
 }
+
 
 .bio header > img{
 	box-sizing: border-box;
 	float: left;
 	width:15%;
-	height:17%;
+	padding-bottom: 15px;
 	margin-right: 25px;
 	margin-top: 15px;
 	margin-left: 8px;
@@ -39,17 +46,18 @@ header a {
 .aboutMe {
 	max-width: 80%;
 	margin-left: 
+	padding-bottom: 10px;
 
 }
 .aboutMe p:first-child::first-letter {
 	font-size: 200%;
 	color: SteelBlue;
 	padding-left: 20px;
+	margin-bottom: 2px;
 }
 
 .aboutMe p:nth-child(3){
 	padding-left: 20px;
-	/*line-height:1px;*/
 }
 
 .aboutMe h5 {
@@ -57,11 +65,20 @@ header a {
 	margin-bottom: 1px;
 }
 
+.aboutMe ido {
+	padding-bottom: 3px;
+}
+
+.spaces {
+	height: 60px;
+}
  .footer-container {
-	 position: absolute;
+	  font-size: 15px;
+	  position: fixed;
 	  right: 0;
 	  bottom: 0;
 	  left: 0;
 	  background-color: #efefef;
 	  text-align: center;
+	  height: 35px;
 }
